XMLtoCSV/objects/unpackaged/objects/PCYC_Milestones__c.object
<CustomObject>
    <description>Milestones Related List on Business Development Deals Object.</description>
    <fields>
        <fullName>PCYC_Business_Development_Deal__c</fullName>
        <description>Business Development Deal Relationship</description>
        <label>Business Development Deal</label>
        <referenceTo>PCYC_Business_Development_Deals__c</referenceTo>
        <relationshipLabel>Milestones</relationshipLabel>
        <relationshipName>Milestones</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>PCYC_Date__c</fullName>
        <description>Date on Milestones related list on Business Development Deal object.</description>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PCYC_Details__c</fullName>
        <description>Details field for Business Development to capture notes on Milestones object on Business Development Deal object.</description>
        <label>Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Milestones</label>
    <nameField>
        <label>Milestones Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Milestones</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>